--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="scss/main.scss">
 </head>
 <body>
-    <header class="flex bg-[#f6f8fd] h-[70px] items-center px:[55px]">
+    <header class="flex bg-[#f6f8fd] h-[70px] items-center px-[55px]">
         <a class="flex items-center gap-[10px]" href="#">
             <img class="h-[32px]" src="img/logo-teaching.png" alt="">
             <div class="logo_tetx">線上開課工具!</div>
         </a>
-        <nav class="mx-auto">
-            <ul class="flex gap-[15px]">
-                <li><a class="hover:text-[#007cc1]" href="#">線上開課工具</a></li>
-                <li><a class="hover:text-[#007cc1]" href="#">功能特色</a></li>
-                <li><a class="hover:text-[#007cc1]" href="#">方案費用</a></li>
-                <li><a class="hover:text-[#007cc1]" href="#">客戶案例</a></li>
-                <li><a class="hover:text-[#007cc1]" href="#">關於我們</a></li>
-                <li><a class="hover:text-[#007cc1]" href="#">藍猴首頁</a></li>
+        <nav class="mx-auto absolute top-[70px] w-full text-center left-0 lg:relative lg:top-0 lg:w-auto">
+            <ul class="flex gap-[15px] flex-col lg:flex-row">
+                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">線上開課工具</a></li>
+                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">功能特色</a></li>
+                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">方案費用</a></li>
+                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">客戶案例</a></li>
+                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">關於我們</a></li>
+                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">藍猴首頁</a></li>
               </ul>
         </nav>
         <a class="header_btn" href="#">FREE! 開通試用</a>
