--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,32 @@
     <title>來一課 最懂你的線上課程開課工具 - 藍猴數位探索BlueMonkey</title>
     <link rel="icon" href="/favicon.ico"/>
     <link rel="stylesheet" href="scss/main.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.11/dist/css/uikit.min.css" />
 </head>
 <body>
-    <header class="flex bg-[#f6f8fd] h-[70px] items-center px-[55px]">
+    <header uk-nav class="flex bg-[#f6f8fd] h-[70px] items-center px-[20px] sm:px-[30px] md-[40] lg:px-[55px]">
         <a class="flex items-center gap-[10px]" href="#">
             <img class="h-[32px]" src="img/logo-teaching.png" alt="">
             <div class="logo_tetx">線上開課工具!</div>
         </a>
-        <nav class="mx-auto absolute top-[70px] w-full text-center left-0 lg:relative lg:top-0 lg:w-auto">
-            <ul class="flex gap-[15px] flex-col lg:flex-row">
-                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">線上開課工具</a></li>
-                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">功能特色</a></li>
-                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">方案費用</a></li>
-                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">客戶案例</a></li>
-                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">關於我們</a></li>
-                <li><a class="hover:text-[#007cc1] block py-[10px]" href="#">藍猴首頁</a></li>
+        <nav class="uk-parent mx-auto absolute top-[70px] w-full text-center left-0 lg:static lg:w-auto">
+            <a class="absolute top-[40px] right-[22px]" href="#"><img class="lg:hidden" src="img/icon_bars.svg" alt=""></a>
+            <ul class=" lg:!flex gap-[15px] flex-col lg:flex-row ">
+                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">線上開課工具</a></li>
+                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">功能特色</a></li>
+                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">方案費用</a></li>
+                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">客戶案例</a></li>
+                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">關於我們</a></li>
+                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">藍猴首頁</a></li>
               </ul>
         </nav>
-        <a class="header_btn" href="#">FREE! 開通試用</a>
+       
+        <a class="hidden lg:block header_btn" href="#">FREE! 開通試用</a>
     </header>
+
+ 
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.17.11/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.17.11/dist/js/uikit-icons.min.js"></script>
 </body>
