--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.11/dist/css/uikit.min.css" />
 </head>
 <body>
-    <header uk-nav class="flex bg-[#f6f8fd] h-[70px] items-center px-[20px] sm:px-[30px] md-[40] lg:px-[55px]">
-        <a class="flex items-center gap-[10px]" href="#">
-            <img class="h-[32px]" src="img/logo-teaching.png" alt="">
-            <div class="logo_tetx">線上開課工具!</div>
-        </a>
-        <nav class="uk-parent mx-auto absolute top-[70px] w-full text-center left-0 lg:static lg:w-auto">
-            <a class="absolute top-[40px] right-[22px]" href="#"><img class="lg:hidden" src="img/icon_bars.svg" alt=""></a>
-            <ul class=" lg:!flex gap-[15px] flex-col lg:flex-row ">
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">線上開課工具</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">功能特色</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">方案費用</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">客戶案例</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">關於我們</a></li>
-                <li><a class="hover:text-[#007cc1] justify-center py-[10px]" href="#">藍猴首頁</a></li>
-              </ul>
-        </nav>
-       
-        <a class="hidden lg:block header_btn" href="#">FREE! 開通試用</a>
-    </header>
+    <%-include("include/headerV1.ejs")%>
 
  
     
