--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>來一課 最懂你的線上課程開課工具 - 藍猴數位探索BlueMonkey</title>
     <link rel="icon" href="/favicon.ico"/>
-    <link rel="stylesheet" href="scss/main.scss">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.11/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="scss/main.scss">
 </head>
 <body>
     <%-include("include/headerV1.ejs")%>
-
+    <main>
+     <section class="bg-[#1b96e1]">
+       <div class="mx-auto max-w-[1300px] text-center">
+         <img src="https://firebasestorage.googleapis.com/v0/b/school-uiui.appspot.com/o/web%2F1685722143.png?alt=media&token=a4425def-93e7-46a5-a7ee-4f47dc8ddbe7">
+         <a class="plan_btn" href="#">查看方案 </a>
+        </div> 
+     </section> 
+       <section>
+        <div class="mx-auto max-w-[1300px] text-center pb-5">
+          <div class="flex">
+            <div class="flex-1">
+                <p class="flex items-center justify-center text-[32px] text-[#1b96e1] font-bold gap-[5px]">
+                    3,988<b class="txxt-[18px]">堂</b></p>
+                <span class="text-[18px] text-[#333]">開課數量</span>
+             </div>
+             <div class="flex-1">
+                <p class="flex items-center justify-center text-[32px] text-[#1b96e1] font-bold gap-[5px]">
+                    15,822<b class="txxt-[18px]">人</b></p>
+                <span>開課數量</span>
+             </div>
+             <div class="flex-1">
+                <p class="flex items-center justify-center text-[32px] text-[#1b96e1] font-bold gap-[5px]">
+                    17,659<b class="txxt-[18px]">萬</b></p>
+                <span>創造總營收</span>
+             </div>
+          </div>
+        </div> 
+        </div>
+       </section> 
+       <section></section> 
+    </main>
  
     
 
