--- a/src/index.html
+++ b/src/index.html
@@ -23,24 +23,46 @@
           <div class="flex">
             <div class="flex-1">
                 <p class="flex items-center justify-center text-[32px] text-[#1b96e1] font-bold gap-[5px]">
-                    3,988<b class="txxt-[18px]">堂</b></p>
+                    3,988<b class="txxt-[18px]">堂</b>
+                </p>
                 <span class="text-[18px] text-[#333]">開課數量</span>
              </div>
              <div class="flex-1">
                 <p class="flex items-center justify-center text-[32px] text-[#1b96e1] font-bold gap-[5px]">
-                    15,822<b class="txxt-[18px]">人</b></p>
+                    15,822<b class="txxt-[18px]">人</b>
+                </p>
                 <span>開課數量</span>
              </div>
              <div class="flex-1">
                 <p class="flex items-center justify-center text-[32px] text-[#1b96e1] font-bold gap-[5px]">
-                    17,659<b class="txxt-[18px]">萬</b></p>
+                    17,659<b class="txxt-[18px]">萬</b>
+                </p>
                 <span>創造總營收</span>
              </div>
           </div>
-        </div> 
+        </div>
+
+      <div class="flex flex-wrap">
+        <%for(var i=0;i<6;i++){%>
+          <div class="flex flex-col lg:flex-row basis-full md:basis-1/2 lg:basis-1/3 xl:basis-1/4">
+            <div class="w-[100px]"><img src="img/spec-img1.png" alt=""></div>
+            <div>
+                <h3>個性化介面</h3>
+                <ul>
+                    <li>首頁版型切換 (七大區塊皆可換)</li>
+                    <li>自訂品牌Logo</li>
+                    <li>開放CSS編輯</li>
+                    <li>增加自訂頁面</li>
+                    <li>部落格文章系統</li>
+                </ul>
+            </div>
+            </div>
+          
+          <%}%>
+        </div>
         </div>
        </section> 
-       <section></section> 
+
     </main>
  
     
