--- a/src/index.html
+++ b/src/index.html
@@ -114,16 +114,35 @@
 
            <div class="flex flex-col lg:flex-row">
              <div class="basis-2/3">
-               <form class="flex flex-col" action="">
-                <div class="input_group">
+               <form class="flex flex-col gap-5" action="">
+                <div class="input_group front_icom lock">
                   <input type="text" placeholder="*名字">
                 </div>
-                <div class="input_group">
-                  <input type="password" placeholder="*密碼">
+                <div class="input_group front_icom email">
+                  <input type="text" placeholder="*Email">
                 </div>
-                <div class="input_group">
-                  <textarea name="" id="" cols="30" rows="10"></textarea>
+                <div class="input_group front_icom phone">
+                  <input type="text" placeholder="*聯絡電話">
                 </div>
+                <div class="flex">
+                   <div>我想了解:</div>
+                     <div class="input_chose">
+                       <input id="chose1" name="plan" type="radio">
+                       <label for="chose1">月租方案</label>
+                     </div>
+                     <div class="input_chose">
+                       <input id="chose2" name="plan" type="radio">
+                       <label for="chose2">企業方案</label>
+                     </div>
+                     <div class="input_chose">
+                       <input id="chose3" name="plan" type="radio">
+                       <label for="chose3">其他</label>
+                     </div>
+                </div>
+                <div class="basis-2/5 flex justify-center items-end">
+                  <button>送出</button>
+                </div>
+                <!--<textarea name="" id="" cols="30" rows="10"></textarea>*/-->
                </form>
              </div>
              <div class="basis-1/3 flex justify-center items-end">
