--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="scss/main.scss">
 </head>
 
+  <%-include("include/ga.ejs")%>
 
 <body>
   <%-include("include/headerV1.ejs")%>
@@ -56,6 +57,7 @@
     <section id="scroll_3" class="bg-[#1193e1]">
       <div class="mx-auto max-w-[1500px] text-center pb-5 px-[20px]">
          <h2 class="py-10 text-[25px] lg:text-[70px] text-white font-bold">各品牌好評見證</h2>
+         <div class="txtJL"></div>
 
 
          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 2xl:grid-cols-6 gap-5">
@@ -147,9 +149,14 @@
     </section>
 
     <div class="w-[100px] h-[100px] fixed right-0 bottom-0 bg-green-300">
-      <a href="#" uk-totop uk-scroll>至頂</a>
-      <a href="scroll_3" uk-scroll>移動到某個</a>
+      <!--<a href="#" uk-totop uk-scroll>至頂</a>
+      <a href="scroll_3" uk-scroll>移動到某個</a>-->
+      <button uk-toggle="target:.uk-toggle">關閉</button>
+      <img src="https://firebasestorage.googleapis.com/v0/b/school-uiui.appspot.com/o/web%2F1677935316.png?alt=media&token=d9c2656d-da00-4e81-ba21-379793cbcac3">
     </div>
+
+     <p uk-toggle="target:.uk-toggle" class="toggle w-[50px] h-[50px] fixed right-0 bottom-0 bg-[red]" hidden>更多方案</p>
+
   </main>
 
   <!-- UIkit JS -->
